tests/snapshots/help__unix__should_display_concise_help_when_passed_short_flag.snap
---
source: tests/help.rs
expression: snapshot
---
stdout:
A command line utility for EVE Online by CCP Games

Usage: eoclu

Options:
  -h, --help     Print help (see more with '--help')
  -V, --version  Print version

stderr:
