tests/snapshots/help__unix__should_display_full_help_when_passed_long_flag.snap
---
source: tests/help.rs
expression: snapshot
---
stdout:
A command line utility for EVE Online by CCP Games.

This tool seeks to offer a convenient command line interface for interacting with the Tranquility server cluster. It is designed to be approachable by users who are curious and may be new to this kind of thing, but also offer more advanced features for users who want to use it to compose a larger script or other program.

Usage: eoclu

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

stderr:
